--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<body>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
 <script type="text/javascript"><!--
@@ -66,7 +63,7 @@ autostart="1">
 
 <a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Alpha%20Omega%20Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
+<p><a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Alpha%20Omega%20Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο ʼλφα Ωμέγα 90.4 MHz FM Χίος |</a>
 
 <a href="https://cdn.rawgit.com/grchannels/data/master/Kanali%207%20Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
 
@@ -143,6 +140,3 @@ autostart="1">
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
 
 </p></p></p></p></p></p></p></p></p></p></p></p></p>
-
-</body>
-</html>
