--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Greek Christian Channels</title>
+</head>
+<body>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
 <script type="text/javascript"><!--
@@ -448,3 +455,6 @@ autostart="1">
 <a href='http://vivlos.net/audio/Kaini/_ANAGNOSTHS/__O ANAGNOSTHS.mp3' style='display:none;'> Κ.Δ. -Δημοτική- Ο ΑΝΑΓΝΩΣΤΗΣ</a>
 
 <script src='http://cdn.rawgit.com/grchannels/data/master/webplayer.js' type='text/javascript'></script>
+
+</body>
+</html>
