--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
 <script type="text/javascript"><!--
@@ -140,6 +141,8 @@ autostart="1">
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
 
 </p></p></p></p></p></p></p></p></p></p></p></p></p>
+
+</div>
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
