--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ autostart="1">
 </p>
 </div>
 
+</select><br />
+</p>
+</div>
+
 <p><a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Christianity.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χριστιανισμός |</a>
 
 <a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20ekxe.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Εκ. Χρ. Ελ. |</a>
@@ -82,7 +86,7 @@ autostart="1">
 
 <a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>
 
-<p><input type="button" value="Word of God" onclick="window.open(&#39;https://www.youtube.com/embed/ZU8AuSEZVQ4?autoplay=1&#39;,&#39;Word of God&#39;,&#39;width=660,height=380&#39;)" />
+<p><input type="button" value="Word of God" onclick="window.open(&#39;https://www.youtube.com/embed/hKEdJOlw4hA?autoplay=1&#39;,&#39;Word of God&#39;,&#39;width=660,height=380&#39;)" />
 
 <input type="button" value="Bible Live" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=biblelivegr&#39;,&#39;Bible Live&#39;,&#39;width=660,height=380&#39;)" />
 
@@ -100,7 +104,7 @@ autostart="1">
 
 <p><input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://www.youtube.com/user/eaepp2/featured&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-peristeri.html&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=500,height=380&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=385&#39;)" />
 
@@ -114,7 +118,7 @@ autostart="1">
 
 <input type="button" value="E. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=660,height=480&#39;)" />
 
-<input type="button" value="Ε. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/watch?v=rcyNCGkXSDI&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="Ε. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/watch?v=15F4mq_S508&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=660,height=480&#39;)" />
 
 <input type="button" value="Ανάσταση TV" onclick="window.open(&#39;http://www.livestream.com/anastasitv&#39;,&#39;Ανάσταση TV&#39;,&#39;width=500,height=630&#39;)" />
 
@@ -138,9 +142,9 @@ autostart="1">
 
 <input type="button" value="Ράδιο Χριστιανική Αλήθεια" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=christiantruth&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" />
 
-<p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
+<p><input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" />
 
-</p></p></p></p></p></p></p></p></p></p></p></p></p>
+<input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
 
 </div>
 
