--- a/index.html
+++ b/index.html
@@ -82,11 +82,14 @@ autostart="1">
 
 <a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>
 
+
 <p><input type="button" value="Word of God" onclick="window.open(&#39;https://www.youtube.com/embed/hKEdJOlw4hA?autoplay=1&#39;,&#39;Word of God&#39;,&#39;width=660,height=380&#39;)" />
 
 <input type="button" value="Bible Live" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=biblelivegr&#39;,&#39;Bible Live&#39;,&#39;width=660,height=380&#39;)" />
 
-<input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" />
+<input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/embed/d6cA8udx3do?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=660,height=380&#39;)" />
+
+<!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
 
 <input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=650,height=520&#39;)" />
 
