--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ autostart="1">
 
 <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/Prophetic%20Channel.html&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" />
+<input type="button" value="Prophetic Channel" onclick="window.open(&#39;http://htmlpreview.github.io/?https://github.com/grchannels/data/blob/master/Prophetic%20Channel.html&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" />
 	
 </div>
 
