--- a/index.html
+++ b/index.html
@@ -58,66 +58,65 @@ autostart="1">
 </p>
 </div>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Christianity.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χριστιανισμός |</a>
+<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Christianity.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χριστιανισμός |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20ekxe.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Εκ. Χρ. Ελ. |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20ekxe.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Εκ. Χρ. Ελ. |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Alpha%20Omega%20Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
+<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Alpha%20Omega%20Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Kanali%207%20Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Kanali%207%20Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
 
 <p><a href="http://www.radio7.gr:8000/48kbps.m3u" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Radio7 |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/GODradio.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| GodRadio |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/GODradio.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| GodRadio |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Christians-Rentis |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Christians-Rentis |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/master/H%20Foni%20tis%20Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
+<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/H%20Foni%20tis%20Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20to%20Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20to%20Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/master/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>
+<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>
 
+<p><input type="button" value="Word of God" onclick="window.open(&#39;https://www.youtube.com/embed/LwfWHZqFH5E?autoplay=1&#39;,&#39;Word of God&#39;,&#39;width=660,height=380&#39;)" />
 
-<p><input type="button" value="Word of God" onclick="window.open(&#39;https://www.youtube.com/embed/hKEdJOlw4hA?autoplay=1&#39;,&#39;Word of God&#39;,&#39;width=660,height=380&#39;)" />
-
-<input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/embed/d6cA8udx3do?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=660,height=380&#39;)" />
+<input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/embed/g1nkwVcUhUw?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=660,height=380&#39;)" />
 
 <input type="button" value="Bible Live" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=biblelivegr&#39;,&#39;Bible Live&#39;,&#39;width=660,height=380&#39;)" />
-	
+
 <!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
 
 <input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=650,height=520&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=665,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=380&#39;)" />
-                                        
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=670,height=390&#39;)" />
+<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=380&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=670,height=390&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-peristeri.html&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=500,height=380&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=385&#39;)" />
+<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-peristeri.html&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=500,height=380&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=510,height=390&#39;)" />
+<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=385&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=680,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=510,height=390&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=660,height=380&#39;)" />
+<input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=680,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/master/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=660,height=380&#39;)" />
+<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=660,height=380&#39;)" />
+
+<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=660,height=380&#39;)" />
 
 <input type="button" value="E. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=660,height=480&#39;)" />
 
-<input type="button" value="Ε. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/watch?v=15F4mq_S508&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="Ε. Βέροιας" onclick="window.open(&#39;https://youtu.be/XACnYGdmjyc&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=660,height=480&#39;)" />
 
 <input type="button" value="Ανάσταση TV" onclick="window.open(&#39;http://www.livestream.com/anastasitv&#39;,&#39;Ανάσταση TV&#39;,&#39;width=500,height=630&#39;)" />
 
@@ -129,7 +128,7 @@ autostart="1">
 
 <input type="button" value="Web Tv Faros" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=webtvfaros&clip=&time=&color=0x006ccd&autoPlay=true&mute=false&iconColorOver=0xe4f2ff&iconColor=0xb5dcff&allowchat=false&height=314&width=222&#39;,&#39;Web Tv Faros&#39;,&#39;width=450,height=300&#39;)" />
 
-<p><input type="button" value="Αποκάλυψη Web TV" onclick="window.open(&#39;https://www.youtube.com/embed/Wakk2pw0ELM?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=660,height=380&#39;)" />
+<p><input type="button" value="Αποκάλυψη Web TV" onclick="window.open(&#39;https://www.youtube.com/embed/gaFeIxeISac?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=660,height=380&#39;)" />
 
 <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδυκτιακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" />
 
@@ -145,7 +144,15 @@ autostart="1">
 
 <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;http://htmlpreview.github.io/?https://github.com/grchannels/data/blob/master/Prophetic%20Channel.html&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" />
+<input type="button" value="Prophetic Channel" onclick="window.open(&#39;http://htmlpreview.github.io/?https://github.com/grchannels/data/blob/e53aeddd/Prophetic%20Channel.html&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" />
+
+<p><input type="button" value="Prophetic Channel YT" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw&#39;,&#39;Prophetic Channel&#39;,&#39;width=600,height=400&#39;)" />
+
+<input type="button" value="Hungry Generation YT" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=660,height=380&#39;)" />
+
+<input type="button" value="ArkofGod.TV YT" onclick="window.open(&#39;https://www.youtube.com/embed/Ggn213zw-x0?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" />
+
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
 </div>
 
