--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ autostart="1">
 
 <input type="button" value="Hungry Generation YT" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=660,height=380&#39;)" />
 
-<input type="button" value="ArkofGod.TV YT" onclick="window.open(&#39;https://www.youtube.com/embed/Ggn213zw-x0?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" />
+<input type="button" value="ArkofGod.TV YT" onclick="window.open(&#39;https://www.youtube.com/embed/mWLJiCUKWVI?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" />
 
 </p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
