--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
 <script type="text/javascript"><!--
