--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@ autostart="1">
 </p>
 </div>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Christianity.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χριστιανισμός |</a>
+<p><a href="https://afreeapo.fastcast4u.com/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=450, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
-<a href="http://ekxeradio.gr/" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=600, width=550, resizable=yes, location=yes'); return false;">| Ράδιο ekxe |</a>
-
-<!-- <a href="https://cdn.rawgit.com/grchannels/data/efa81d6b/Radio%20ekxe.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο ekxe |</a>  -->
+<a href="https://cdn.rawgit.com/grchannels/data/71d38d86/Radio%20EKXE.html" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=280, width=450, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a>
 
 <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
@@ -90,27 +88,27 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=650,height=520&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/55f2989e/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=660,height=400&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=660,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/57fadd4b/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=480&#39;)" />
                                         
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=670,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=670,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=480&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=680,height=480&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=680,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/cbce291e/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/cbce291e/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=510,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1ac87db3/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=530,height=400&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=660,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9cd472a2/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=400&#39;)" />
 
 <p><input type="button" value="Eκ. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -130,7 +128,7 @@ autostart="1">
 
 <input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=acocgr1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=500,height=380&#39;)" />
 
-<input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://youtu.be/AxgfyMoaXTA&#39;,&#39;39;Ελ. Χρ. Εκ.&#39;,&#39;width=550,height=450&#39;)" />
+<input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
 
 <p><input type="button" value="Apokalipsi WebTv" onclick="window.open(&#39;https://www.youtube.com/user/ApokalipsiWebTV/live?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -140,23 +138,29 @@ autostart="1">
 
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;)" />
 
+<input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" />
+
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=380&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/user/HungryGeneration/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+
+<p><input type="button" value="Joel Osteen" onclick="window.open(&#39;https://www.youtube.com/user/joelosteenministries/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=400&#39;)" />
+
 <!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
 
 <!-- <input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" /> -->
 
-<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" /> -->
-
-<!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
-
 <!-- <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδικτυακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" /> -->
 
 <!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
-</p></p></p></p></p></p></p></p></p></p></p></p></p>
+
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
 </div>
 
