--- a/index.html
+++ b/index.html
@@ -86,29 +86,29 @@ autostart="1">
 
 <input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/channel/UC8KnlXI3YAkOZfwMgxb1lOg/live?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=530,height=550&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=650,height=520&#39;)" />
+<input type="button" value="ΕΑΕΠ Tube" onclick="window.open(&#39;http://www.eaeptube.com/stream.php?mode=player&#39;,&#39;ΕΑΕΠ Tube&#39;,&#39;width=375,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/55f2989e/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=660,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/55f2989e/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=550,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=660,height=480&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/57fadd4b/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/57fadd4b/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=400&#39;)" />
                                         
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=670,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=550,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=480&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=680,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=550,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/cbce291e/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=660,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/cbce291e/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1ac87db3/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=530,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1ac87db3/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=420,height=400&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=660,height=480&#39;)" />
+<input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=550,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9cd472a2/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=660,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9cd472a2/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=550,height=400&#39;)" />
 
 <p><input type="button" value="Eκ. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -148,7 +148,7 @@ autostart="1">
 
 <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/user/HungryGeneration/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<p><input type="button" value="Joel Osteen" onclick="window.open(&#39;https://www.youtube.com/user/joelosteenministries/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="Joel Osteen" onclick="window.open(&#39;https://www.youtube.com/user/joelosteenministries/live?autoplay=1&#39;,&#39;Lakewood Church&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=400&#39;)" />
 
@@ -160,7 +160,7 @@ autostart="1">
 
 <!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
 
-</p></p></p></p></p></p></p></p></p></p></p></p></p></p>
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
 </div>
 
