--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
+<iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
+
 <script type="text/javascript"><!--
 function song(){
 document.getElementById('Radio_station').innerHTML="<embed type='application/x-mplayer2' id='music2' pluginspage='http://www.microsoft.com/Windows/MediaPlayer/' src='"+document.getElementById('cancion').value+"' name='MediaPlayer1' width='495' height='400' enableContextMenu='0' controltype='2' showcontrols='1' showstatusbar='1' AutoStart='1'></embed>";
@@ -112,11 +114,13 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=640,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9cd472a2/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Logos Church" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=logoschurchgr&#39;,&#39;Εκ. Ο Ζωντανός Λόγος&#39;,&#39;width=500,height=380&#39;)" />
 
 <p><input type="button" value="Apokalipsi WebTV" onclick="window.open(&#39;https://www.youtube.com/user/ApokalipsiWebTV/live?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -160,27 +164,38 @@ autostart="1">
 
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=350&#39;)" />
+<input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;CBN&#39;,&#39;width=550,height=380&#39;)" />
 
-<!-- <input type="button" value="Prophetic Channel UT" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+<input type="button" value="TBN Live" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/2323138e/TBN_HD.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/20636934/ArkofGod%20Tv.html&#39;,&#39;ArkofGod.TV&#39;,&#39;width=650,height=370&#39;)" />
+<input type="button" value="Hillsong" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/f6c837c6/Hillsong_Channel.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=400&#39;)" />
+<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<p><input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/user/HungryGeneration/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Joel Osteen" onclick="window.open(&#39;https://www.youtube.com/user/joelosteenministries/live?autoplay=1&#39;,&#39;Lakewood Church&#39;,&#39;width=550,height=480&#39;)" />
+<!--                                                       "  B      A      C      K      U      P  "                                        -->
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=400&#39;)" />
 
-<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
+
+<!-- <input type="button" value="TBN UK Live" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7b60a983/TBN_UK.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" /> /> -->
+
+<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCYPyAh4PaRbaTTXwGP_XmzA/live?autoplay=1&#39;,&#39;Emmanuel TV UT&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/20636934/ArkofGod%20Tv.html&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=640,height=400&#39;)" /> -->
 
 <!-- <input type="button" value="Radio CT" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=ct_radio&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" /> -->
 
 <!-- <input type="button" value="Web Tv Faros" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=webtvfaros&clip=&time=&color=0x006ccd&autoPlay=true&mute=false&iconColorOver=0xe4f2ff&iconColor=0xb5dcff&allowchat=false&height=314&width=222&#39;,&#39;Web Tv Faros&#39;,&#39;width=500,height=380&#39;)" /> -->
 
 <!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=750,height=350&#39;)" /> -->
 
 <!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
 
@@ -192,13 +207,11 @@ autostart="1">
 
 <!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
 
-<!-- <input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" /> -->
-
 <!-- <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδικτυακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" /> -->
 
 <!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
-
-</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p>
+	
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
 </div>
 
