--- a/index.html
+++ b/index.html
@@ -164,50 +164,15 @@ autostart="1">
 
 <input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;CBN&#39;,&#39;width=550,height=380&#39;)" />
 
-<input type="button" value="TBN Live" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/2323138e/TBN_HD.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="Hillsong" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/f6c837c6/Hillsong_Channel.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="TBN UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_UK.html&#39;,&#39;TBN UK&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Hillsong Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=335&#39;)" />
+
+<p><input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
-
-
-<!--                                                       "  B      A      C      K      U      P  "                                        -->
-
-
-
-<!-- <input type="button" value="TBN UK Live" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7b60a983/TBN_UK.html&#39;,&#39;TBN&#39;,&#39;width=580,height=335&#39;)" /> /> -->
-
-<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCYPyAh4PaRbaTTXwGP_XmzA/live?autoplay=1&#39;,&#39;Emmanuel TV UT&#39;,&#39;width=550,height=480&#39;)" /> -->
-
-<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=350&#39;)" /> -->
-
-<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
-
-<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/20636934/ArkofGod%20Tv.html&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" /> -->
-
-<!-- <input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=640,height=400&#39;)" /> -->
-
-<!-- <input type="button" value="Radio CT" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=ct_radio&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" /> -->
-
-<!-- <input type="button" value="Web Tv Faros" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=webtvfaros&clip=&time=&color=0x006ccd&autoPlay=true&mute=false&iconColorOver=0xe4f2ff&iconColor=0xb5dcff&allowchat=false&height=314&width=222&#39;,&#39;Web Tv Faros&#39;,&#39;width=500,height=380&#39;)" /> -->
-
-<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
-
-<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=750,height=350&#39;)" /> -->
-
-<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
-
-<!-- <input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" /> -->
-
-<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" /> -->
-
-<!-- <a href="http://www.radio7.gr:8000/48kbps.m3u" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Radio7 |</a> -->
-
-<!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
-
-<!-- <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδικτυακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" /> -->
-
-<!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
 	
 </p></p></p></p></p></p></p></p></p></p></p></p></p></p>
 	
